// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`creates FSA action 1`] = `
Object {
  "error": false,
  "meta": undefined,
  "payload": undefined,
  "type": "TEST",
}
`;

exports[`creates saga action from class payload 1`] = `
Object {
  "error": false,
  "meta": undefined,
  "payload": [Function],
  "type": "SAGA_RANDOM",
}
`;
